--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Settings"></activity>
-        <activity android:name=".TaskDetail" />
-        <activity android:name=".AllTasks" />
-        <activity android:name=".AddTask" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.Settings"></activity>
+        <activity android:name=".activities.TaskDetail" />
+        <activity android:name=".activities.AllTasks" />
+        <activity android:name=".activities.AddTask" />
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
