--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
         <activity android:name=".activities.Settings"></activity>
         <activity android:name=".activities.TaskDetail" />
         <activity android:name=".activities.AllTasks" />
