added ability to add new teams and incorporate spinner into the project for selecting which team to add a task to and which team to display a list of tasks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <service android:name="org.eclipse.paho.android.service.MqttService" />
         <activity android:name=".activities.Settings"></activity>
         <activity android:name=".activities.TaskDetail" />
-        <activity android:name=".activities.AllTasks" />
+        <activity android:name=".activities.AddTeam" />
         <activity android:name=".activities.AddTask" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
