in process of figuring out how to upload file to s3 bucket

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -23,5 +23,11 @@
 			"providerPlugin": "awscloudformation",
 			"dependsOn": []
 		}
+	},
+	"storage": {
+		"files": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
