--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,41 +1,47 @@
 {
-    "api": {
-        "taskmaster": {
-            "service": "AppSync",
-            "providerPlugin": "awscloudformation",
-            "output": {
-                "authConfig": {
-                    "additionalAuthenticationProviders": [],
-                    "defaultAuthentication": {
-                        "authenticationType": "API_KEY",
-                        "apiKeyConfig": {
-                            "description": "API Key For taskmaster ",
-                            "apiKeyExpirationDays": "365"
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "auth": {
-        "taskmaster7e51e1c5": {
-            "service": "Cognito",
-            "providerPlugin": "awscloudformation",
-            "dependsOn": []
-        }
-    },
-    "storage": {
-        "files": {
-            "service": "S3",
-            "providerPlugin": "awscloudformation"
-        }
-    },
-    "notifications": {
-        "taskmasterQ84pJ": {
-            "service": "Pinpoint",
-            "channels": [
-                "FCM"
-            ]
-        }
-    }
+	"api": {
+		"taskmaster": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"authConfig": {
+					"additionalAuthenticationProviders": [],
+					"defaultAuthentication": {
+						"authenticationType": "API_KEY",
+						"apiKeyConfig": {
+							"description": "API Key For taskmaster ",
+							"apiKeyExpirationDays": "365"
+						}
+					}
+				}
+			}
+		}
+	},
+	"auth": {
+		"taskmaster7e51e1c5": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	},
+	"storage": {
+		"files": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
+	},
+	"notifications": {
+		"taskmasterQ84pJ": {
+			"service": "Pinpoint",
+			"channels": [
+				"FCM"
+			]
+		}
+	},
+	"analytics": {
+		"taskmasterQ84pJ": {
+			"service": "Pinpoint",
+			"providerPlugin": "awscloudformation"
+		}
+	}
 }
